# nix-configuration

./: .xmobarrc  LICENSE  README.md  README.org  configuration.nix  flake.nix  fonts.nix  hardware-configuration.nix  home.nix  theme.nix  xmonad-desktop.nix
.config/nixpkgs/: home.nix
.xmonad/: xmonad.hs
base/home/: default.nix
base/system/: configuration.nix  default.nix  hardware-configuration.nix  virtualisation.nix
base/wayland/: default.nix
base/xserver/: default.nix
config/taffybar/: flake.nix
desktops/: xserver.nix
desktops/cinnamon/: cinnamon.nix  dconf.nix  home.nix
desktops/hyprland/: config.nix  home.nix  hyprland.conf.nix  hyprland.nix
desktops/pantheon/: dconf.nix  home.nix  pantheon.nix
desktops/theme/: default.nix  dracula.nix  nordic.nix  rose-pine-moon.nix
desktops/wayland/: home.nix  system.nix
desktops/xmonad/: dconf.nix  home.nix  xmonad.hs  xmonad.nix
home-manager/: dconf.nix  home.nix  test.nix  theme.nix
modules/sddm-git/: sddm.nix
nixos/: flake.nix
overlays/: aisleriot.patch  default.nix  discord.nix  dracula.nix  edusong.nix  gnome-aisleriot.nix  gnome-mutter.nix  gnome-terminal.nix  gtksourceview.nix  nordic.nix  nwg-launchers.nix  nwg-launchers.patch  rime-data.nix  steam.nix  waybar.nix  waybar.patch
programs/: cinnamon.nix  default.nix  xmonad.nix
services/: cinnamon.nix  xmonad.nix
taffybar/: flake.nix  my-taffybar.cabal  overlay.nix  stack.yaml  taffybar.css  taffybar.hs
theme/: default.nix  dracula.nix  fonts.nix  nord.nix  rose-pine-moon.nix
xmonad/: xmonad-x86_64-linux  xmonad.errors  xmonad.hs
(+495 files in other folders)
