name:                my-taffybar
version:             0.1.0.0
author:              Liam Petrie
maintainer:          liamdpetrie@vivaldi.net
build-type:          Simple
cabal-version:       >=1.10

executable taffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
		     , gi-gtk
		     , gtk-sni-tray
		     , haskell-gi-base
                     , taffybar
                     , X11>=1.8
  default-language:    Haskell2010
